k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: basebook
  labels:
    name: basebook
    app: basebook-dex
    environment: production
