k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: basebook
  labels:
    app: basebook-dex
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: basebook-dex
    component: frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  sessionAffinity: None
